--- a/linea/index.html
+++ b/linea/index.html
@@ -3,34 +3,67 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gráfico de Series Temporales</title>
+  <title>Gráficos con Chart.js</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #f4f4f4;
+      margin: 0;
+    }
+
+    canvas {
+      border: 2px solid #ccc;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      margin: 20px;
+    }
+  </style>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
   <canvas id="lineChart" width="400" height="200"></canvas>
+  <canvas id="barChart" width="400" height="200"></canvas>
+  <canvas id="pieChart" width="400" height="200"></canvas>
+  <canvas id="radarChart" width="400" height="200"></canvas>
+  <canvas id="scatterChart" width="400" height="200"></canvas>
+
   <script>
-    const ctx = document.getElementById('lineChart').getContext('2d');
-    const lineChart = new Chart(ctx, {
-      type: 'line',
-      data: {
-        labels: ['Ene', 'Feb', 'Mar', 'Abr', 'May', 'Jun'],
-        datasets: [{
-          label: 'Ventas Mensuales',
-          data: [30, 50, 40, 60, 80, 90],
-          borderColor: 'rgba(75, 192, 192, 1)',
-          backgroundColor: 'rgba(75, 192, 192, 0.2)',
-          fill: true,
-        }]
-      },
-      options: {
-        responsive: true,
-        scales: {
-          y: {
-            beginAtZero: true
-          }
-        }
-      }
-    });
+    fetch('data.json')
+      .then(response => response.json())
+      .then(data => {
+        const lineChart = new Chart(document.getElementById('lineChart').getContext('2d'), {
+          type: 'line',
+          data: data.lineChart,
+          options: { responsive: true, scales: { y: { beginAtZero: true } } }
+        });
+
+        const barChart = new Chart(document.getElementById('barChart').getContext('2d'), {
+          type: 'bar',
+          data: data.barChart,
+          options: { responsive: true, scales: { y: { beginAtZero: true } } }
+        });
+
+        const pieChart = new Chart(document.getElementById('pieChart').getContext('2d'), {
+          type: 'pie',
+          data: data.pieChart,
+          options: { responsive: true }
+        });
+
+        const radarChart = new Chart(document.getElementById('radarChart').getContext('2d'), {
+          type: 'radar',
+          data: data.radarChart,
+          options: { responsive: true, scale: { ticks: { beginAtZero: true, max: 100 } } }
+        });
+
+        const scatterChart = new Chart(document.getElementById('scatterChart').getContext('2d'), {
+          type: 'scatter',
+          data: data.scatterChart,
+          options: { responsive: true, scales: { x: { title: { display: true, text: 'Tiempo (meses)' } }, y: { title: { display: true, text: 'Ventas' } } } }
+        });
+      });
   </script>
 </body>
 </html>
