--- a/linea/index.html
+++ b/linea/index.html
@@ -12,7 +12,6 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh;
       background-color: #f4f4f4;
       margin: 0;
       padding: 20px;
@@ -39,9 +38,36 @@
     .category {
       margin-bottom: 40px;
     }
+
+    .video-container {
+      position: relative;
+      width: 100%;
+      max-width: 600px;
+      padding-bottom: 56.25%; /* 16:9 */
+      height: 0;
+      overflow: hidden;
+      margin-bottom: 40px;
+    }
+
+    .video-container iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
   </style>
 </head>
 <body>
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/2O8F0sOvTkI"
+      title="Video de YouTube"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen>
+    </iframe>
+  </div>
+
   <div class="category">
     <h2>Ventas</h2>
     <div class="chart-container">
@@ -75,7 +101,6 @@
       const response = await fetch('data.json');
       const data = await response.json();
 
-      // Crear los gráficos con los datos del JSON
       new Chart(document.getElementById('pieChart').getContext('2d'), {
         type: 'pie',
         data: data.pieChart,
@@ -85,7 +110,7 @@
       new Chart(document.getElementById('lineChart').getContext('2d'), {
         type: 'line',
         data: data.lineChart,
-        options: { 
+        options: {
           responsive: true,
           scales: { y: { beginAtZero: true } }
         }
@@ -94,7 +119,7 @@
       new Chart(document.getElementById('barChart').getContext('2d'), {
         type: 'bar',
         data: data.barChart,
-        options: { 
+        options: {
           responsive: true,
           scales: { y: { beginAtZero: true } }
         }
@@ -103,7 +128,7 @@
       new Chart(document.getElementById('radarChart').getContext('2d'), {
         type: 'radar',
         data: data.radarChart,
-        options: { 
+        options: {
           responsive: true,
           scale: { ticks: { beginAtZero: true, max: 100 } }
         }
@@ -112,9 +137,9 @@
       new Chart(document.getElementById('scatterChart').getContext('2d'), {
         type: 'scatter',
         data: data.scatterChart,
-        options: { 
+        options: {
           responsive: true,
-          scales: { 
+          scales: {
             x: { title: { display: true, text: 'Tiempo (meses)' } },
             y: { title: { display: true, text: 'Ventas' } }
           }
@@ -122,7 +147,6 @@
       });
     }
 
-    // Llamada a la función para cargar los datos al iniciar la página
     loadData();
   </script>
 </body>
