--- a/form/index.html
+++ b/form/index.html
@@ -40,6 +40,7 @@
           <option value="fr">Francia</option>
           <option value="ma">Marruecos</option>
         </select>
+        <input type="submit" value="Enviar formulario">
       </form>
     </article>
 
