--- a/form/index.html
+++ b/form/index.html
@@ -2,10 +2,48 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Formulario de contacto básico con validaciones HTML5.">
+  <meta name="author" content="Tu Nombre">
   <title>Formulario de contacto</title>
   <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+    }
+    header, nav, main {
+      padding: 1em;
+    }
+    nav ul {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      gap: 1em;
+    }
+    nav a {
+      text-decoration: none;
+      color: #007BFF;
+    }
     article { display: none; }
-    article.active { display: block; }
+    article.active { display: block; margin-top: 1em; }
+    form input, form select {
+      width: 100%;
+      padding: 0.5em;
+      margin: 0.5em 0;
+      box-sizing: border-box;
+    }
+    input[type="submit"] {
+      background-color: #007BFF;
+      color: white;
+      border: none;
+      cursor: pointer;
+      padding: 0.75em;
+    }
+    input[type="submit"]:hover {
+      background-color: #0056b3;
+    }
   </style>
 </head>
 <body>
@@ -18,44 +56,55 @@
     <ul>
       <li><a href="#" onclick="mostrar('formulario')">Formulario</a></li>
       <li><a href="#" onclick="mostrar('checks')">Checks</a></li>
-      <li><a href="https://www.youtube.com/" target="_blank">Esto te lleva a YouTube</a></li>
+      <li><a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">YouTube</a></li>
     </ul>
   </nav>
 
   <main>
-    <article id="formulario" class="active">
-      <h2>Formulario de contacto</h2>
-      <form method="GET" action="#">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="ejemplo@correo.com"><br><br>
+    <section id="formulario" class="active">
+      <article>
+        <h2>Formulario de contacto</h2>
+        <form method="GET" action="#">
+          <fieldset>
+            <legend>Información personal</legend>
 
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" placeholder="Tu nombre"><br><br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" placeholder="ejemplo@correo.com" required autocomplete="email">
 
-        <label for="pais">País:</label>
-        <select id="pais" name="pais">
-          <option value="es">España</option>
-          <option value="uk">Inglaterra</option>
-          <option value="br">Brasil</option>
-          <option value="fr">Francia</option>
-          <option value="ma">Marruecos</option>
-        </select>
-        <input type="submit" value="Enviar formulario">
-      </form>
-    </article>
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required minlength="2">
 
-    <article id="checks">
-      <h2>Marca lo que tengas</h2>
-      <p><label><input type="checkbox" name="certificados" value="devops"> Certificado de DEVOPS</label></p>
-      <p><label><input type="checkbox" name="certificados" value="betis"> Carnet Betis</label></p>
-      <p><label><input type="checkbox" name="certificados" value="discapacidad"> Carnet 33%</label></p>
-      <p><label><input type="checkbox" name="certificados" value="youtube"> Canal de YouTube</label></p>
-    </article>
+            <label for="pais">País:</label>
+            <select id="pais" name="pais" required>
+              <option value="">-- Selecciona un país --</option>
+              <option value="es">España</option>
+              <option value="uk">Inglaterra</option>
+              <option value="br">Brasil</option>
+              <option value="fr">Francia</option>
+              <option value="ma">Marruecos</option>
+            </select>
+          </fieldset>
+          <input type="submit" value="Enviar formulario">
+        </form>
+      </article>
+    </section>
+
+    <section id="checks">
+      <article>
+        <h2>Marca lo que tengas</h2>
+        <form>
+          <p><label><input type="checkbox" name="certificados" value="devops"> Certificado de DEVOPS</label></p>
+          <p><label><input type="checkbox" name="certificados" value="betis"> Carnet Betis</label></p>
+          <p><label><input type="checkbox" name="certificados" value="discapacidad"> Carnet 33%</label></p>
+          <p><label><input type="checkbox" name="certificados" value="youtube"> Canal de YouTube</label></p>
+        </form>
+      </article>
+    </section>
   </main>
 
   <script>
     function mostrar(id) {
-      document.querySelectorAll('article').forEach(el => el.classList.remove('active'));
+      document.querySelectorAll('section').forEach(el => el.classList.remove('active'));
       document.getElementById(id).classList.add('active');
     }
   </script>
