--- a/linea/index.html
+++ b/linea/index.html
@@ -10,7 +10,6 @@
       font-family: Arial, sans-serif;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
       align-items: center;
       min-height: 100vh;
       background-color: #f4f4f4;
@@ -37,18 +36,20 @@
     }
 
     .category {
-      margin-bottom: 40px;
+      width: 100%;
+      margin-bottom: 60px;
     }
 
     .video-container {
       width: 100%;
-      max-width: 800px;
-      margin: 0 auto 40px;
+      max-width: 1200px;
+      margin: 0 auto;
     }
 
     video {
       width: 100%;
-      height: auto;
+      height: 700px;
+      object-fit: cover;
       border: 2px solid #ccc;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
@@ -97,7 +98,6 @@
       const response = await fetch('data.json');
       const data = await response.json();
 
-      // Gráficos bajo "Ventas"
       new Chart(document.getElementById('pieChart').getContext('2d'), {
         type: 'pie',
         data: data["Ventas"].pieChart,
@@ -113,7 +113,6 @@
         }
       });
 
-      // Gráfico bajo "Rendimiento de Jugadores"
       new Chart(document.getElementById('radarChart').getContext('2d'), {
         type: 'radar',
         data: data["Rendimiento de Jugadores"].radarChart,
@@ -128,7 +127,6 @@
         }
       });
 
-      // Gráficos bajo "Estadísticas de Ventas"
       new Chart(document.getElementById('barChart').getContext('2d'), {
         type: 'bar',
         data: data["Estadísticas de Ventas"].barChart,
