--- a/linea/index.html
+++ b/linea/index.html
@@ -219,7 +219,7 @@
     <div class="video-container">
       <div class="responsive-youtube">
         <!-- Reemplaza el ID "dQw4w9WgXcQ" con el ID de tu video de YouTube -->
-        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+        <iframe src="https://www.youtube.com/embed/lopJtAE39F8" 
                 title="Video Explicativo" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen>
