--- a/linea/index.html
+++ b/linea/index.html
@@ -215,12 +215,12 @@
   </div>
 
   <section class="video-section">
-    <h2 class="video-title">Video de la Roca</h2>
+    <h2 class="video-title">Video de YouTube</h2>
     <div class="video-container">
       <div class="responsive-youtube">
         <!-- Reemplaza el ID "dQw4w9WgXcQ" con el ID de tu video de YouTube -->
-        <iframe src="https://www.youtube.com/embed/lopJtAE39F8" 
-                title="Video de la roca" 
+        <iframe src="https://www.youtube.com/embed/quLtYqZDvaY" 
+                title="Video de YouTube" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen>
         </iframe>
