--- a/linea/index.html
+++ b/linea/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
   <title>Dashboard de Análisis</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
@@ -218,8 +221,8 @@
     <h2 class="video-title">Video de YouTube</h2>
     <div class="video-container">
       <div class="responsive-youtube">
-        <!-- Reemplaza el ID "dQw4w9WgXcQ" con el ID de tu video de YouTube -->
-        <iframe src="https://www.youtube.com/embed/quLtYqZDvaY" 
+        <!-- Video actualizado con el ID correcto -->
+        <iframe src="https://www.youtube.com/embed/quLtYqZDvaY?version=3&amp;rel=0" 
                 title="Video de YouTube" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen>
