--- a/linea/index.html
+++ b/linea/index.html
@@ -221,8 +221,8 @@
     <h2 class="video-title">Video de YouTube</h2>
     <div class="video-container">
       <div class="responsive-youtube">
-        <!-- Video actualizado con el ID correcto -->
-        <iframe src="https://www.youtube.com/embed/quLtYqZDvaY?version=3&amp;rel=0" 
+        <!-- Video actualizado (Mayo 2025) -->
+        <iframe src="https://www.youtube.com/embed/oWUS1Um3RS8?version=3&amp;rel=0&amp;t=0&amp;nocache=123456" 
                 title="Video de YouTube" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen>
